--- a/src/app/components/overviews/app-overview/app-overview.component.html
+++ b/src/app/components/overviews/app-overview/app-overview.component.html
@@ -6,12 +6,12 @@
 
     <div class="info-card overview-card">
         <h3>
-            <mat-icon svgIcon="remotes"></mat-icon>
-            Remotes Status
+            <mat-icon [svgIcon]="mode"></mat-icon>
+            {{ mode | titlecase}} Status
         </h3>
         <mat-card class="info-card-content">
             <mat-card-content class="overview-content">
-                <strong>Current Status Overview</strong>
+                <strong>{{ mode | titlecase}} Status Overview</strong>
                 <div class="remotes-bar">
                     <div class="bar active-bar" [style.width.%]="(activeCount / remotes.length) * 100"></div>
                     <div class="bar inactive-bar" [style.width.%]="(inactiveCount / remotes.length) * 100"></div>
