--- a/src/app/modals/about-modal/about-modal.component.html
+++ b/src/app/modals/about-modal/about-modal.component.html
@@ -9,7 +9,7 @@
         </button>
     </div>
     <!-- Main About Page -->
-    <div class="modal-content" #content (scroll)="onScroll(content)" [class.blurred]="currentPage !== 'main'">
+    <div class="modal-content" #content (scroll)="onScroll(content)">
         <mat-icon svgIcon="rclone" class="app-icon"></mat-icon>
         <h2 class="app-name">RClone Manager</h2>
         <p class="app-team">Hakan İSMAİL</p>
