--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,7 +80,13 @@
 
     <!-- Overview Components -->
     <ng-container *ngIf="remotes.length > 0 && !selectedRemote && !isLoading">
-      <app-general-overview *ngIf="currentTab === 'general'"></app-general-overview>
+      <app-general-overview *ngIf="currentTab === 'general'" [remotes]="remotes" [jobs]="jobs"
+        [iconService]="iconService" (mountRemote)="mountRemote($event)" (unmountRemote)="unmountRemote($event)"
+        (stopJob)="stopOperation($event.type, $event.remoteName)"
+        (browseRemote)="openRemoteInFiles($event, 'mount')"
+        (copyRemote)="startOperation('copy', $event)"
+        (syncRemote)="startOperation('sync', $event)"
+        (selectRemote)="selectRemote($event)"></app-general-overview>
       <app-app-overview *ngIf="currentTab !== 'general'" [mode]="currentTab" [iconService]="iconService"
         [remotes]="remotes" (remoteSelected)="selectRemote($event)"
         (primaryAction)="currentTab === 'mount' ? mountRemote($event) : (currentTab === 'sync' || currentTab === 'copy' ? startOperation(currentTab, $event) : null)"
